WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
158524
[Win] Shadow DOM tests are failing.
https://bugs.webkit.org/show_bug.cgi?id=158524
Summary
[Win] Shadow DOM tests are failing.
Per Arne Vollan
Reported
2016-06-08 06:47:19 PDT
This feature has not been enabled on Windows.
Attachments
Patch
(8.23 KB, patch)
2016-06-08 07:06 PDT
,
Per Arne Vollan
bfulgham
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Per Arne Vollan
Comment 1
2016-06-08 07:06:49 PDT
Created
attachment 280803
[details]
Patch
Brent Fulgham
Comment 2
2016-06-08 08:26:17 PDT
Comment on
attachment 280803
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=280803&action=review
Looks good! Thanks for getting this working! :-)
> LayoutTests/platform/win/TestExpectations:3361 > +
webkit.org/b/148695
fast/shadow-dom [ Pass ]
Why is this necessary if they are all passes? Can't this line just be removed? Or will the tests not run (because a parent 'TestExpectations' file has them turned off?
Per Arne Vollan
Comment 3
2016-06-08 09:41:47 PDT
(In reply to
comment #2
)
> Comment on
attachment 280803
[details]
> Patch > > View in context: >
https://bugs.webkit.org/attachment.cgi?id=280803&action=review
> > Looks good! Thanks for getting this working! :-) > > > LayoutTests/platform/win/TestExpectations:3361 > > +
webkit.org/b/148695
fast/shadow-dom [ Pass ] > > Why is this necessary if they are all passes? Can't this line just be > removed? Or will the tests not run (because a parent 'TestExpectations' file > has them turned off?
Yes, this will override the expectations from the top level 'TextExpectations' file. It is copied from the Mac test expectations. Thanks for reviewing!
Per Arne Vollan
Comment 4
2016-06-08 11:50:35 PDT
Committed
r201817
: <
http://trac.webkit.org/changeset/201817
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug