[Win] Shadow DOM tests are failing. https://bugs.webkit.org/show_bug.cgi?id=158524

Reviewed by Brent Fulgham.

.:

Enable Shadow DOM.

* Source/cmake/OptionsWin.cmake:

Source/WebKit/win:

Add preference for enabling Shadow DOM.

* Interfaces/IWebPreferencesPrivate.idl:
* WebPreferenceKeysPrivate.h:
* WebPreferences.cpp:
(WebPreferences::initializeDefaultSettings):
(WebPreferences::shadowDOMEnabled):
(WebPreferences::setShadowDOMEnabled):
* WebPreferences.h:
* WebView.cpp:
(WebView::notifyPreferencesChanged):

Tools:

Enable Shadow DOM when running tests.

* DumpRenderTree/win/DumpRenderTree.cpp:
(resetWebPreferencesToConsistentValues):

LayoutTests:

Update test expectations for Shadow DOM.

* platform/win/TestExpectations:


Canonical link: https://commits.webkit.org/176600@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@201817 268f45cc-cd09-0410-ab3c-d52691b4dbfc