Source/WebKit/win/WebPreferences.h
@@ -235,6 +235,8 @@ public:
     virtual HRESULT STDMETHODCALLTYPE setShowTiledScrollingIndicator(BOOL);
     virtual HRESULT STDMETHODCALLTYPE fetchAPIEnabled(_Out_ BOOL*);
     virtual HRESULT STDMETHODCALLTYPE setFetchAPIEnabled(BOOL);
+    virtual HRESULT STDMETHODCALLTYPE shadowDOMEnabled(_Out_ BOOL*);
+    virtual HRESULT STDMETHODCALLTYPE setShadowDOMEnabled(BOOL);
 
     // WebPreferences
 
